[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy_dead.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "normal",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 10 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )

[node name="Enemy" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
frames = SubResource( 1 )
animation = "normal"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.499996, -39.5 )
scale = Vector2( 4.85, 4.05 )
process_parent = true
physics_process_parent = true

[node name="smash_detactor" type="Area2D" parent="."]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 0, -80 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="smash_detactor"]
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="smash_detactor" to="." method="_on_smash_detactor_area_entered"]
[connection signal="body_entered" from="smash_detactor" to="." method="_on_smash_detactor_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
